# mongodb-language-model-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  mongodb.pest  simple.pest
