[package]
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
description = "Parses MongoDB query language and returns an abstract syntax tree"
edition = "2021"
license = "Apache-2.0"
name = "mongodb-language-model"
readme = "README.md"
repository = "https://github.com/fcoury/mongodb-language-model-rust"
version = "0.1.2"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = "1"
serde_json = {version = "1", features = ["preserve_order"]}
